# cody

./: .env.example  .gitignore  .pylintrc  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  plan.md  pyproject.toml  setup.py  test_basic.py
.claude/: settings.json
.github/workflows/: pages.yml  python-publish.yml  release-binary.yml
ai_tests/: README.md  security.md  setup.md
ai_tests/cli/: chat.md  init.md  run.md  sessions.md  skills.md
ai_tests/reports/: 2026-03-20_report.md
ai_tests/sdk/: basic.md  cancel.md  circuit_breaker.md  config.md  convenience.md  custom_prompt.md  custom_tools.md  errors.md  events.md  hooks.md  interaction.md  lsp.md  mcp.md  memory.md  stateless.md  streaming.md  sync_client.md  thinking.md  tool_filter.md  user_input.md
ai_tests/tools/: agents.md  command.md  file_ops.md  history.md  search.md  todo.md  web.md
ai_tests/web/: api.md  chat.md
cody/: __init__.py  _version.py  cli.py  client.py  server.py  shared.py  tui.py
cody/cli/: __init__.py  main.py  rendering.py  utils.py
cody/cli/commands/: config.py  init_cmd.py  sessions.py  skills.py
cody/core/: __init__.py  _process.py  audit.py  auth.py  config.py  context.py  deps.py  errors.py  file_history.py  interaction.py  log.py  lsp_client.py  mcp_client.py  memory.py  model_resolver.py  permissions.py  project_instructions.py  prompt.py  prompts.py  rate_limiter.py  retry.py  runner.py  session.py  setup.py  skill_manager.py  storage.py  sub_agent.py  tools.py  user_input.py  web.py
cody/core/tools/: __init__.py  _base.py  _file_filter.py  agents.py  command.py  file_ops.py  (+11 more)
cody/sdk/: __init__.py  client.py  config.py  errors.py  events.py  metrics.py  types.py
cody/tui/: __init__.py  app.py  widgets.py
docs/: AGENT_KERNEL_REVIEW.md  API.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_REPORT.md  CLI.md  CONFIG.md  FEATURES.md  HANDOFF.md  HARNESS.md  PROJECT_REVIEW.md  QUICKSTART.md  REVIEW-VS-OPENCODE.md  SDK.md  SKILLS.md  TUI.md
pages/: docs.html  index.html  script.js  sdk.html  style.css
pages/prompts/: _gen_prompts.py  _shared-context.md
pages/sdk/: 01-single-run.html  02-multi-turn.html  03-streaming.html  04-tools.html  05-custom-tools.html  06-prompt.html  07-skills.html  08-mcp.html  09-security.html  10-events.html  11-memory.html  12-human-in-loop.html  13-storage.html  _template.html
plans/: human-input-anytime.md
scripts/: build-binary.sh  cody_web_entry.py
sdk/go/: README.md  cody.go  cody_test.go  go.mod
templates/github-actions/: ai-code-review.yml  ai-fix-issues.yml  ai-test-gen.yml
tests/: __init__.py  conftest.py  test_audit.py  test_auth.py  test_circuit_breaker.py  test_cli.py  test_client.py  test_config.py  test_context.py  test_custom_tools.py  test_errors.py  test_file_history.py  test_lsp.py  test_mcp.py  test_memory.py  test_per_run_tools.py  test_permissions.py  test_project_instructions.py  test_prompt.py  test_prompts.py  test_rate_limiter.py  test_rendering.py  test_retry.py  test_run_cancel.py  test_runner.py  test_sdk.py  test_server.py  test_session.py  test_setup.py  test_skill_manager.py  test_stateless.py  test_step_hooks.py  test_storage_abstraction.py  test_stream_chunk_types.py  test_sub_agent.py  test_sub_agent_recovery.py  test_system_prompt.py  test_tools.py  test_truncation.py  test_tui.py  (+3 more)
web/: README.md  __init__.py  index.html  package-lock.json  package.json  vite.config.ts
web/backend/: __main__.py  app.py  db.py  helpers.py  middleware.py  models.py  state.py
web/src/: App.tsx  index.css
web/tests/: conftest.py  test_agents.py  test_audit.py  test_chat.py  test_config.py  test_directories.py  test_errors.py  test_health.py  test_helpers.py  test_middleware.py  test_projects.py  test_run.py  test_sessions.py  test_skills.py  test_task_chat.py  test_tasks.py  test_tool.py  test_websocket.py
(+55 files in other folders)
