[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cody-ai"
version = "1.5.0"
description = "AI coding assistant with RPC support, dynamic skills, and MCP integration"
authors = [{name = "GouChao"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic-ai>=0.0.14",
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "textual>=0.80.0",
]

[project.scripts]
cody = "cody.cli:main"
cody-web = "web.backend.app:run"
cody-tui = "cody.tui:run_tui"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
repl = [
    "prompt_toolkit>=3.0.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
